# order-book

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: orderbook_demo.cpp
bench/: orderbook_bench.cpp
docs/: demo.md  design.md  performance.md
examples/: events.jsonl
include/orderbook/: jsonl.hpp  order_book.hpp  spsc_ring.hpp  synthetic.hpp  types.hpp
src/: jsonl.cpp  order_book.cpp  synthetic.cpp
tests/: orderbook_tests.cpp  parser_corpus.cpp  parser_fuzz.cpp  parser_libfuzzer.cpp
tools/: check_bench.py  serve_replay.py
web/: app.js  index.html  styles.css
